user profile done

--- a/views/signned-home.ejs
+++ b/views/signned-home.ejs
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <%- include('./_header.ejs') %>
-<%- include('./_navigation.ejs') %>
+<%- include('./_navigation-signned.ejs') %>
 <body>
 
   <!-- Jumbotron -->
   <div class="jumbotron text-center">
     <h1 class="display-4">Welcome to PostIt App</h1>
     <p class="lead">Share your posts and read others' posts</p>
-    <a class="btn btn-primary btn-lg" href="/login" role="button">Log in now</a>
+    <a class="btn btn-primary btn-lg" href="" role="button">View Post</a>
   </div>
 
   <!-- PostIt History Section -->
