--- a/views/_navigation-signned.ejs
+++ b/views/_navigation-signned.ejs
@@ -21,11 +21,11 @@
                 <% } %>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Post</a>
+                <a class="nav-link" href="/users/post">Post</a>
               </li>
               <% if (role == "admin") { %>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">User List</a>
+                  <a class="nav-link" href="/admins/userList">User List</a>
                 </li>
               <% } %>
               <li class="nav-item">
