--- a/views/signned-home.ejs
+++ b/views/signned-home.ejs
@@ -8,7 +8,7 @@
   <div class="jumbotron text-center">
     <h1 class="display-4">Welcome to PostIt App</h1>
     <p class="lead">Share your posts and read others' posts</p>
-    <a class="btn btn-primary btn-lg" href="" role="button">View Post</a>
+    <a class="btn btn-primary btn-lg" href="/users/post" role="button">View Post</a>
   </div>
 
   <!-- PostIt History Section -->
