--- a/views/_custom-style1.ejs
+++ b/views/_custom-style1.ejs
@@ -2,6 +2,12 @@
     /* Custom Styles */
     body {
       font-family: 'Roboto', sans-serif;
+      background-image: linear-gradient(135deg, #FAB2FF 10%, #1904E5 100%);
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      font-family: "Open Sans", sans-serif;
+      color: #333333;
     }
     .jumbotron {
       background-color: #f8f9fa;
